--- a/traversoni.html
+++ b/traversoni.html
@@ -95,7 +95,6 @@
 
             <div class="flex space-x-8">
                 <a href="chisiamo.html" class="text-gray-300 hover:text-red-400 font-medium transition-colors rounded-md p-2 hover:bg-gray-800">Chi Siamo</a>
-                <a href="traversoni.html" class="text-gray-300 hover:text-red-400 font-medium transition-colors rounded-md p-2 hover:bg-gray-800">Traversoni</a>
                 <a href="podcasts.html" class="text-gray-300 hover:text-red-400 font-medium transition-colors rounded-md p-2 hover:bg-gray-800">Podcasts</a>
                 <a href="links.html" class="text-gray-300 hover:text-red-400 font-medium transition-colors rounded-md p-2 hover:bg-gray-800">Links</a>
                 <a href="mailto:transversalpuntozero@gmail.com" class="text-gray-300 hover:text-red-400 font-medium transition-colors rounded-md p-2 hover:bg-gray-800">Contattaci</a>
@@ -138,7 +137,7 @@
                 <h2>Eventi e Aggiornamenti</h2>
 
                 <h3>18/04/2K25 TECHNO VINYL DJSET<br>VINILIKA CONNECTION</h3>
-                <img src="https://placehold.co/600x400/1f2937/e5e7eb?text=Vinilika_SB_18-4.jpg" alt="Vinilika SB 18-4">
+                <img src="Vinilika_SB_18-4.jpg" alt="Vinilika SB 18-4">
                 <p>
                     GRAZIE AGLI AMICI DELLO SWEET BUNCH<br>
                     A CHI IL 20 DIC E 7 FEB HA BALLATO LA NOSTRA TECHNO<br>
@@ -146,7 +145,7 @@
                     PROSSIMO APPUNTAMENTO ALLO SWEET BUNCH IL 7/3<br>
                     FOLTA LINE UP_DAL POMERIGGIO_PER STREAMING WEBTEK 23<br>
                 </p>
-                <img src="https://placehold.co/600x400/1f2937/e5e7eb?text=Vinilika_Conn_SW_02.jpg" alt="Vinilika connection SweetBunch">
+                <img src="Vinilika_Conn_SW_02.jpg" alt="Vinilika connection SweetBunch">
 
                 <h3>QUASI IN 1000 HANNO VISITATO IL NOSTRO CANALE DURANTE LO STREAM DALLO SWEET BUNCH PER IL WEBTEK 23..GRAZIE!!</h3>
                 <p>
@@ -157,22 +156,22 @@
                 </p>
 
                 <h3>30-3 ANCORA AL DEFRUG CON GLI AMICI 00NOWHERE</h3>
-                <img src="https://placehold.co/600x400/1f2937/e5e7eb?text=Roma_Techno_Lunch_30_3.jpg" alt="Roma Techno Lunch">
+                <img src="Roma Techno Lunch 30 3.jpg" alt="Roma Techno Lunch">
                 <p>GRAZIE AGLI AMICI DEGLI 00 NOWHERE!!<br>SUPER-TECHNO-SUNDAY</p>
-                <img src="https://placehold.co/600x400/1f2937/e5e7eb?text=Roma_Techno_Lunch_Retro.jpg" alt="Roma Techno Lunch Retro">
+                <img src="Roma Techno Lunch Retro.jpg" alt="Roma Techno Lunch Retro">
 
                 <h3>SUPERSERATATRANCIRCLE!! A PRESTO!!</h3>
-                <img src="https://placehold.co/600x400/1f2937/e5e7eb?text=Trancircle_FortePrenestino_00.jpg" alt="Trancircle Forte Prenestino">
+                <img src="Trancircle_FortePrenestino_00.jpg" alt="Trancircle Forte Prenestino">
 
                 <h3>Video: Vinilika_SweetBunch_02</h3>
                 <video controls>
-                    <source src="https://placehold.co/600x400/000000/FFFFFF?text=Video+Placeholder" type="video/mp4">
+                    <source src="Vinilika_SweetBunch_02.mp4" type="video/mp4">
                     Il tuo browser non supporta il tag video.
                     </video>
 
                 <h3>Video: Transversalpuntozero_00.MOV</h3>
                 <video controls>
-                    <source src="https://placehold.co/600x400/000000/FFFFFF?text=Video+Placeholder" type="video/mp4">
+                    <source src="Transversalpuntozero_00.MOV.mov" type="video/mp4">
                     Il tuo browser non supporta il video HTML5. Puoi scaricarlo <a href="#">qui</a>.
                     </video>
 
@@ -193,7 +192,7 @@
             <div class="content-block">
                 <h2>Altri Contenuti Video</h2>
                 <h3>TranaversalDJShowcase</h3>
-                <iframe src="https://player.vimeo.com/video/1040552440?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="360" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" title="TranaversalDJShowcase" allowfullscreen></iframe>
+                <iframe src="https://player.vimeo.com/video/1040552440?badge=0&autopause=0&player_id=0&app_id=58479" width="360" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" title="TranaversalDJShowcase" allowfullscreen></iframe>
 
                 <h3>DIY_Video<br>WebTek_22_VinylDjSet<br>Audio_MT2<br>Aree Private</h3>
                 <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Placeholder Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
