--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             id="main-video"
             src="https://github.com/fabriziosalmi/transversal/raw/refs/heads/main/28-06-2025_renoize_transversalpuntozero.mp4"
             autoplay
-            muted="false" <!-- Consider setting to true for better autoplay compatibility, then unmuting via user interaction -->
+            muted="false"
             loop="false"
             playsinline
             class="max-w-full max-h-full object-contain rounded-lg shadow-2xl"
@@ -57,24 +57,20 @@
     <div id="main-content" class="w-full flex-col items-center justify-center hidden">
         <nav class="navbar-bg shadow-xl py-4 px-6 md:px-12 w-full">
             <div class="container mx-auto flex justify-between items-center">
-                <a href="#" class="text-2xl font-bold text-red-400 rounded-md p-2 hover:bg-gray-800 transition-colors flex-shrink-0">
+                <a href="#" class="text-2xl font-bold text-red-400 rounded-md p-2 hover:bg-gray-800 transition-colors">
                     Transversal Punto Zero
                 </a>
-                <!-- Desktop Menu: Hidden on small screens, visible on medium and up -->
-                <div class="hidden md:flex md:space-x-6 lg:space-x-8">
+                <div class="flex space-x-8">
                     <a href="chisiamo.html" class="text-gray-300 hover:text-red-400 font-medium transition-colors rounded-md p-2 hover:bg-gray-800">Chi Siamo</a>
                     <a href="traversoni.html" class="text-gray-300 hover:text-red-400 font-medium transition-colors rounded-md p-2 hover:bg-gray-800">Traversoni</a>
                     <a href="podcasts.html" class="text-gray-300 hover:text-red-400 font-medium transition-colors rounded-md p-2 hover:bg-gray-800">Podcasts</a>
                     <a href="links.html" class="text-gray-300 hover:text-red-400 font-medium transition-colors rounded-md p-2 hover:bg-gray-800">Links</a>
                     <a href="mailto:transversalpuntozero@gmail.com" class="text-gray-300 hover:text-red-400 font-medium transition-colors rounded-md p-2 hover:bg-gray-800">Contattaci</a>
                 </div>
-                <!-- Mobile Menu Button: Visible on small screens, hidden on medium and up -->
                 <button
-                    id="mobile-menu-button"
                     class="md:hidden text-gray-400 hover:text-gray-100 focus:outline-none focus:ring-2 focus:ring-red-500 rounded-md p-2 transition-colors"
                     aria-label="Toggle navigation"
-                    aria-expanded="false" 
-                    aria-controls="mobile-menu"
+                    style="display: none;"
                 >
                     <svg
                         class="w-6 h-6"
@@ -91,16 +87,6 @@
                         ></path>
                     </svg>
                 </button>
-            </div>
-            <!-- Mobile Menu: Hidden by default, toggled by JS. Also hidden on medium and up via md:hidden. -->
-            <div id="mobile-menu" class="hidden md:hidden">
-                <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3">
-                    <a href="chisiamo.html" class="block text-gray-300 hover:text-red-400 font-medium transition-colors rounded-md py-2 px-3 hover:bg-gray-800 w-full text-left">Chi Siamo</a>
-                    <a href="traversoni.html" class="block text-gray-300 hover:text-red-400 font-medium transition-colors rounded-md py-2 px-3 hover:bg-gray-800 w-full text-left">Traversoni</a>
-                    <a href="podcasts.html" class="block text-gray-300 hover:text-red-400 font-medium transition-colors rounded-md py-2 px-3 hover:bg-gray-800 w-full text-left">Podcasts</a>
-                    <a href="links.html" class="block text-gray-300 hover:text-red-400 font-medium transition-colors rounded-md py-2 px-3 hover:bg-gray-800 w-full text-left">Links</a>
-                    <a href="mailto:transversalpuntozero@gmail.com" class="block text-gray-300 hover:text-red-400 font-medium transition-colors rounded-md py-2 px-3 hover:bg-gray-800 w-full text-left">Contattaci</a>
-                </div>
             </div>
         </nav>
 
@@ -129,7 +115,6 @@
 
         <footer class="bg-gray-950 text-white py-10 w-full">
             <div class="container mx-auto px-6 md:px-12 text-center">
-                <p>© 2024 Transversal Punto Zero. All rights reserved.</p>
             </div>
         </footer>
     </div>
@@ -145,53 +130,27 @@
 
             // Function to show main content and hide video
             const showMainContent = () => {
-                if (videoPlayerSection) {
-                    videoPlayerSection.classList.add('hidden');
-                }
-                if (mainContent) {
-                    mainContent.classList.remove('hidden');
-                    mainContent.classList.add('flex'); // Ensure flex display for content
-                    mainContent.classList.add('animate-fadeIn'); // Apply fade-in animation
-                }
-                if (heroLogoContainer) {
-                    heroLogoContainer.classList.remove('hidden');
-                }
-                if (initialHeroText) {
-                    initialHeroText.classList.add('hidden');
-                }
+                videoPlayerSection.classList.add('hidden');
+                mainContent.classList.remove('hidden');
+                mainContent.classList.add('flex'); // Ensure flex display for content
+                mainContent.classList.add('animate-fadeIn'); // Apply fade-in animation
+                // Ensure logo is shown and initial text is hidden
+                heroLogoContainer.classList.remove('hidden');
+                initialHeroText.classList.add('hidden');
             };
 
             // Event listener for video ending
-            if (mainVideo) {
-                mainVideo.onended = showMainContent;
-
-                // Attempt to play video on load, with fallback for autoplay policies
-                mainVideo.play().catch(error => {
-                    console.error("Video autoplay failed:", error);
-                    // If autoplay fails, show content immediately
-                    showMainContent();
-                });
-            } else {
-                 // If there's no video element, show main content immediately
-                showMainContent();
-            }
-
+            mainVideo.onended = showMainContent;
 
             // Event listener for skip button
-            if (skipVideoButton) {
-                skipVideoButton.onclick = showMainContent;
-            }
+            skipVideoButton.onclick = showMainContent;
 
-            // Mobile menu toggle
-            const mobileMenuButton = document.getElementById('mobile-menu-button');
-            const mobileMenu = document.getElementById('mobile-menu');
-
-            if (mobileMenuButton && mobileMenu) {
-                mobileMenuButton.addEventListener('click', () => {
-                    const isMenuHidden = mobileMenu.classList.toggle('hidden');
-                    mobileMenuButton.setAttribute('aria-expanded', !isMenuHidden); 
-                });
-            }
+            // Attempt to play video on load, with fallback for autoplay policies
+            mainVideo.play().catch(error => {
+                console.error("Video autoplay failed:", error);
+                // If autoplay fails, show content immediately
+                showMainContent();
+            });
         });
     </script>
 </body>
